Fix for carousel image disappearing on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,7 @@ h1 {
 	color: black;
 }
 
+
 .htmlcss-tech {
 	margin-left: 20px;
 }
@@ -94,3 +95,8 @@ h1 {
 	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='#000' viewBox='0 0 8 8'%3E%3Cpath d='M1.5 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
 }
 
+.carousel-item.active,
+.carousel-item-next,
+.carousel-item-prev {
+	display:block;
+}
